<resources>
    <string name="app_name">MyShop</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="phone">Номер телефона</string>
    <string name="registration">Вход</string>
    <string name="login">Войти</string>
    <string name="requirement">Нажимая кнопку “Войти”, Вы принимаете \n <u>условия программы лояльности</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_description">icon</string>
    <string name="home">Главная</string>
    <string name="catalogue">Каталог</string>
    <string name="bag">Корзина</string>
    <string name="discount">Акции</string>
    <string name="profile">Профиль</string>
    <string name="valid_symbols">недопустимые символы</string>
    <string name="input_firstname">Введите имя</string>
    <string name="input_lastname">Введите фамилию</string>
    <string name="input_phone">Введите номер телефона</string>
    <string name="description">Описание</string>
    <string name="hide">Скрыть</string>

</resources>