<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/catalogue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/catalogue"
        android:icon="@drawable/catalog"/>
    <item
        android:id="@+id/bag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bag"
        android:icon="@drawable/bag"/>
    <item
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/discount"
        android:icon="@drawable/discount1"/>
    <item
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/profile1"/>
</menu>